# controllers/Reservation.js
@@ -5,11 +5,10 @@ var Reservation = require('../service/ReservationService');
 
 module.exports.getReservations = function getReservations (req, res, next) {
 
+  if (req.session.loggedIn) {
+    var id_user = req.session.logged_id;
 
-  if (req.session.loggedIn){
-    var sessionId = req.session.logged_id;
-
-    Reservation.getReservations(sessionId)
+    Reservation.getReservations(id_user)
       .then(function (response) {
         utils.writeJson(res, response);
       })
@@ -24,16 +23,22 @@ module.exports.getReservations = function getReservations (req, res, next) {
 module.exports.postReservation = function postReservation (req, res, next) {
   
   var id_artistic_event = req.swagger.params["id_artistic_event"].value;
+  var quantity = req.swagger.params["quantity"].value;
 
-  if (req.session.loggedIn){
-    var sessionId = req.session.logged_id;
+  if (req.session.loggedIn) {
+    var id_user = req.session.logged_id;
 
-    Reservation.postReservation(sessionId, id_artistic_event)
+    Reservation.postReservation(id_user, id_artistic_event, quantity)
         .then(function (response) {
-          utils.writeJson(res, response);
+          if (req.header('Referer').includes('?'))
+            res.redirect(307, req.header('Referer') + "&type=reservation&success=true");
+          else
+            res.redirect(307, req.header('Referer') + "?type=reservation&success=true");
+          res.end();
         })
         .catch(function (response) {
-          utils.writeJson(res, response);
+          res.redirect(307, "/?type=reservation&success=false");
+          res.end();
         });
 
   }
