# service/UserService.js
@@ -13,9 +13,9 @@ var bcrypt = require("../index").bcrypt;
  * id_user Long id of the logged user
  * returns User
  **/
-exports.getUserById = function(id_user) {
-  return new Promise(function(resolve, reject) {
-    resolve(db.select().table(schema.tables.USER).where("id", id_user));
+exports.getUserById = function (id_user) {
+  return new Promise(function (resolve, reject) {
+    resolve(db.select('id', 'email', 'first_name', 'last_name').table(schema.tables.USER).where("id", id_user));
   });
 }
 
@@ -27,26 +27,24 @@ exports.getUserById = function(id_user) {
  * password String password of the user to log
  * returns User
  **/
-exports.logUser = function(email,password) {
-
-  return new Promise(function(resolve, reject) {
-              
-              db.select().table(schema.tables.USER).where(schema.fields.EMAIL, email).then(
-                function(result) {
-                  //no user found case
-                  if (Object.keys(result).length == 0)
-                    return reject({status: 405, message:"Please enter valid credentials"});
-                  else {//successfully logged case
-                      if (bcrypt.compareSync(password, result[0].password)){
-                        result[0].password = null;
-                        return resolve(result);
-                      }
-                        
-                      else
-                        return reject({status: 405, message:"Please enter valid credentials"});  
-                  }
-                }
-              );                                       
+exports.logUser = function (email, password) {
+  return new Promise(function (resolve, reject) {
+    db.select().table(schema.tables.USER).where(schema.fields.EMAIL, email)
+      .then(function (result) {
+        if (Object.keys(result).length == 0)
+          //no user found case
+          return reject({ status: 405, message: "Please enter valid credentials" });
+        else {
+          //email found case
+          if (bcrypt.compareSync(password, result[0].password)) {
+            result[0].password = null;
+            return resolve(result);
+          }
+          else
+            return reject({ status: 405, message: "Please enter valid credentials" });
+        }
+      }
+      );
   });
 }
 
@@ -57,66 +55,65 @@ exports.logUser = function(email,password) {
  * body User user object that needs to be registered.
  * no response value expected for this operation
  **/
-exports.registerUser = function(body) {
+exports.registerUser = function (body) {
 
-  return new Promise(function(resolve, reject) {
-    
+  return new Promise(function (resolve, reject) {
+
     //control valid user and password   
     if (!validUser(body.email, body.password))
-      return reject({status: 405, message:"Your password must contain at least 6 characters"});
-    else{
+      return reject({ status: 405, message: "Both password and email address must contain at least 6 characters" });
+    else {
 
       //control if there is another user with that email
-      db.select().table(schema.tables.USER).where(schema.fields.EMAIL, body.email).then(function(data) {
+      db.select().table(schema.tables.USER).where(schema.fields.EMAIL, body.email).then(function (data) {
 
         var obj = Object(data);
 
         //email already in use
-        if (obj.length>0) 
-          return reject({status: 405, message:"Email already in use"});
-        else
-          {
-            if (body.password!=body.password_confirm) //uncorrect password
-           
-               return reject({status: 405, message:"The passwords doesn't match"});
-           
-            else{ //correctly registered
-              var user = {
-                "first_name": body.first_name,
-                "last_name": body.last_name,
-                "email":body.email,
-                "password":bcrypt.hashSync(body.password, 10)
-              }  
-              
-              db(schema.tables.USER).insert(user).then(function(){
-                
-                return resolve(db.select(schema.fields.PK, schema.fields.EMAIL, "first_name", "last_name").table(schema.tables.USER).where(schema.fields.EMAIL, user.email));
-                
-              })
-            
+        if (obj.length > 0)
+          return reject({ status: 405, message: "Email already in use" });
+        else {
+          if (body.password != body.password_confirm) //uncorrect password
+
+            return reject({ status: 405, message: "The passwords doesn't match" });
+
+          else { //correctly registered
+            var user = {
+              "first_name": body.first_name,
+              "last_name": body.last_name,
+              "email": body.email,
+              "password": bcrypt.hashSync(body.password, 10)
             }
-          }   
+
+            db(schema.tables.USER).insert(user).then(function () {
+
+              return resolve(db.select(schema.fields.PK, schema.fields.EMAIL, "first_name", "last_name").table(schema.tables.USER).where(schema.fields.EMAIL, user.email));
+
+            })
+
+          }
+        }
 
 
       })
-      
+
 
     }
-    
-    
-      //return reject({status: 405, message:"Something goes wrong"});
-    
+
+
+    //return reject({status: 405, message:"Something goes wrong"});
+
   });
 }
 
 
 function validUser(email, password) {
-  const validEmail = typeof email == 'string' && 
-                              email.trim() != ' ';
+  const validEmail = typeof email == 'string' &&
+    email.length > 5;
 
   const validPassword = typeof password == 'string' &&
-                                  password.trim() != ' ' &&
-                                  password.trim().length >= 6;
+    password.trim() != ' ' &&
+    password.trim().length >= 6;
 
-  return validEmail && validPassword;                                                            
+  return validEmail && validPassword;
 }
